<resources>
    <string name="app_name">BestTrip</string>
    <string name="best_trip_with_us">Best trip with us</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="login_with_email">Login with email</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="skip">Skip</string>
    <string name="forgot_password_2">Forgot Password</string>
    <string name="enter_your_email_address_to_reset_password">Enter your email address to reset password</string>
    <string name="email_address">Email Address</string>
    <string name="send_instruction">Send Instruction</string>
    <string name="your_departure">Your Departure</string>
    <string name="where_you_heading">Where you heading?</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'BestTrip\'.</string>

    <!-- Error strings -->
    <string name="password_as_same_as_username_or_email">Your password can not be the same as username or email. Please choose a different password.</string>
    <string name="password_to_short">Your password should have 6 characters or longer.</string>
    <string name="password_not_match">Your passwords don\'t match. Please retype your password to confirm it.</string>
    <string name="empty_field">%1$s is empty!!!</string>
    <string name="email_incorrect_format">Your email is not in the correct format</string>
</resources>
