<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".features.home.LandingActivity">

    <!-- Horizontal guideline -->

    <android.support.constraint.Guideline
        android:id="@+id/glTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <!-- Vertical guideline -->

    <android.support.constraint.Guideline
        android:id="@+id/glLeft"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/glRight"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <!-- Logo -->

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/app_name"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glTop" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/best_trip_with_us"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

    <!-- Landing view -->

    <TextView
        android:id="@+id/tvDeparture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/googleg_disabled_color_18"
        android:padding="16dp"
        android:text="@string/your_departure"
        app:layout_constraintEnd_toEndOf="@id/glRight"
        app:layout_constraintStart_toStartOf="@id/glLeft"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <TextView
        android:id="@+id/tvDestination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_radius"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/googleg_disabled_color_18"
        android:padding="16dp"
        android:text="@string/where_you_heading"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@id/glRight"
        app:layout_constraintStart_toStartOf="@id/glLeft"
        app:layout_constraintTop_toBottomOf="@id/tvDeparture" />

</android.support.constraint.ConstraintLayout>